--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-03-phonebook",
+  "name": "goit-react-hw-06-phonebook-re",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vovaryba.github.io/goit-react-hw-03-phonebook-re",
+  "homepage": "https://vovaryba.github.io/goit-react-hw-06-phonebook-re",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.1",
@@ -15,7 +15,10 @@
     "react-hook-form": "^7.29.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
